start quiz update

--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Travel Prep Tool</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="parallax-wrapper">
-    <div class="parallax-bg" id="parallax"></div>
-
+  
+    <div class="card-wrapper" id="cardFlash"></div>
     <div class="container" id="intro">
-      <h1>Are you ready to pack? 🚗🚝✈️</h1>
-      <p>We’re here to help you pack without stress and be your friendly reminder <3</p>
-      <button id="startBtn">Let’s Go!</button>
-    </div>
-  </div>
+    <span class="emoji">🧳🚂✈️</span>
+      <h1 class="typing" >Ready to travel?</h1>
+     
+      <p>We’re here to help you pack without stress</p>
+      <button id="startBtn">→</button>
+    
 
   <script src="script.js"></script>
 </body>
