--- a/quiz_1.html
+++ b/quiz_1.html
@@ -33,6 +33,21 @@
     <p id="statusMsg" style="margin-top: 1rem;"></p>
   </div>
 
+
+
+  <!-- MUSIC -->
+ 
+
+  <div id="playMusic" class="mini-player">
+    <div class="player-controls">
+      <div class="track-info">
+        <span class="music-emoji">🎵</span>
+        <span id="trackLabel">nothing is playing</span>
+      </div class="circle-btn" >
+      <button id="toggleMusicTab" >▶</button>
+    </div>
+  </div>
+  
   <script src="quiz.js"></script>
 </body>
 </html>
