--- a/opening.html
+++ b/opening.html
@@ -5,26 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Let’s Start!</title>
   <link rel="stylesheet" href="opening_style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <div class="emoji-wrapper">
-    <h1>Let’s Start! ✨</h1>
+    <h1>Music On!</h1>
     <p>Choose your travel vibe:</p>
-    <div class="emoji-options"> <a href="quiz_1.html">
-      <button class="emoji-btn" data-track="lofi">🌿</button>
-      <button class="emoji-btn" data-track="pop">🎉</button>
-      <button class="emoji-btn" data-track="chill">🌊</button>
-      <button class="emoji-btn" data-track="adventure">⛰️</button>
-    </a>
+    <div class="emoji-options">
+        <button class="emoji-btn" data-track="lofi" data-next="quiz_1.html">🌿</button>
+        <button class="emoji-btn" data-track="pop" data-next="quiz_1.html">🎉</button>
+        <button class="emoji-btn" data-track="chill" data-next="quiz_1.html">🌊</button>
+        <button class="emoji-btn" data-track="adventure" data-next="quiz_1.html">⛰️</button>
     </div>
+      
+      
   </div>
 
-  <!-- Audio files (host locally or link online) -->
+  <!-- MUSIC -->
   
-  <audio id="lofi" src="music/lofi.mp3"></audio>
-  <audio id="pop" src="music/pop.mp3"></audio>
-  <audio id="chill" src="music/chill.mp3"></audio>
-  <audio id="adventure" src="music/adventure.mp3"></audio>
+  
+
+
 
   <script src="script.js"></script>
 </body>
