finish quiz_need transition and finishing

--- a/opening.html
+++ b/opening.html
@@ -15,10 +15,10 @@
     <h1>Music On!</h1>
     <p>Choose your travel vibe:</p>
     <div class="emoji-options">
-        <button class="emoji-btn" data-track="lofi" data-next="quiz_1.html">🌿</button>
-        <button class="emoji-btn" data-track="pop" data-next="quiz_1.html">🎉</button>
-        <button class="emoji-btn" data-track="chill" data-next="quiz_1.html">🌊</button>
-        <button class="emoji-btn" data-track="adventure" data-next="quiz_1.html">⛰️</button>
+        <button class="emoji-btn" data-track="lofi" data-next="quiz_1_document.html">🌿</button>
+        <button class="emoji-btn" data-track="pop" data-next="quiz_1_document.html">🎉</button>
+        <button class="emoji-btn" data-track="chill" data-next="quiz_1_document.html">🌊</button>
+        <button class="emoji-btn" data-track="adventure" data-next="quiz_1_document.html">⛰️</button>
     </div>
       
       
