finish all update

--- a/quiz_2_Electronic.html
+++ b/quiz_2_Electronic.html
@@ -30,7 +30,7 @@
     <h1>💻 Electronic</h1>
     <p>We all know electronics can make or break your trip </p>
 
-    <form id="checklistForm" data-category="electronics" data-next="quiz_3_clothes.html">
+    <form id="checklistForm" data-category="electronics" data-next="interval_1.html">
       <div id="checkStyle">
       <label>
         <input type="checkbox" name="passport" />
