--- a/quiz_4_toiletries.html
+++ b/quiz_4_toiletries.html
@@ -9,6 +9,7 @@
 <body>
 
   <div class="card-wrapper" id="cardFlash"></div>
+  <div class="animation-layer" id="animationLayer"></div>
   <div class="container">
     <!-- FOR INCOMPLETE AND COMPLETE -->
     <div id="statusGrid" class="status-grid">
