--- a/quiz_6_other.html
+++ b/quiz_6_other.html
@@ -9,6 +9,7 @@
 <body>
 
   <div class="card-wrapper" id="cardFlash"></div>
+  <div class="animation-layer" id="animationLayer"></div>
   <div class="container">
     <!-- FOR INCOMPLETE AND COMPLETE -->
     <div id="statusGrid" class="status-grid">
@@ -30,7 +31,7 @@
     <h1>📦 Others  </h1>
     <p>These little things are 100% game-changers </p>
 
-    <form id="checklistForm" data-category="other" data-next=".html">
+    <form id="checklistForm" data-category="other" data-next="beforeFinal.html">
       <div id="checkStyle">
         <label>
           <input type="checkbox" name="keys" />
